--- a/src/sidebar/sidebar.css
+++ b/src/sidebar/sidebar.css
@@ -14,7 +14,6 @@
   padding-left: 0;
   margin-bottom: 0;
   list-style: none;
-  height: 93vh;
 }
 
 .nav-link {
@@ -573,19 +572,19 @@ a.badge:focus {
   border-radius: 10rem;
 }
 
-.badge-primary {
+.badge-sideBtn {
   color: #fff;
   background-color: #007bff;
 }
 
-a.badge-primary:hover,
-a.badge-primary:focus {
+a.badge-sideBtn:hover,
+a.badge-sideBtn:focus {
   color: #fff;
   background-color: #0062cc;
 }
 
-a.badge-primary:focus,
-a.badge-primary.focus {
+a.badge-sideBtn:focus,
+a.badge-sideBtn.focus {
   outline: 0;
   -webkit-box-shadow: 0 0 0 0.2rem rgba(0, 123, 255, 0.5);
   box-shadow: 0 0 0 0.2rem rgba(0, 123, 255, 0.5);
@@ -764,17 +763,17 @@ a.badge-dark.focus {
   color: inherit;
 }
 
-.alert-primary {
+.alert-sideBtn {
   color: #004085;
   background-color: #cce5ff;
   border-color: #b8daff;
 }
 
-.alert-primary hr {
+.alert-sideBtn hr {
   border-top-color: #9fcdff;
 }
 
-.alert-primary .alert-link {
+.alert-sideBtn .alert-link {
   color: #002752;
 }
 
@@ -1186,18 +1185,18 @@ a.badge-dark.focus {
   border-bottom: 0;
 }
 
-.list-group-item-primary {
+.list-group-item-sideBtn {
   color: #004085;
   background-color: #b8daff;
 }
 
-.list-group-item-primary.list-group-item-action:hover,
-.list-group-item-primary.list-group-item-action:focus {
+.list-group-item-sideBtn.list-group-item-action:hover,
+.list-group-item-sideBtn.list-group-item-action:focus {
   color: #004085;
   background-color: #9fcdff;
 }
 
-.list-group-item-primary.list-group-item-action.active {
+.list-group-item-sideBtn.list-group-item-action.active {
   color: #fff;
   background-color: #004085;
   border-color: #004085;
@@ -2287,14 +2286,14 @@ a.close.disabled {
   vertical-align: text-top !important;
 }
 
-.bg-primary {
+.bg-sideBtn {
   background-color: #007bff !important;
 }
 
-a.bg-primary:hover,
-a.bg-primary:focus,
-button.bg-primary:hover,
-button.bg-primary:focus {
+a.bg-sideBtn:hover,
+a.bg-sideBtn:focus,
+button.bg-sideBtn:hover,
+button.bg-sideBtn:focus {
   background-color: #0062cc !important;
 }
 
@@ -2423,7 +2422,7 @@ button.bg-dark:focus {
   border-left: 0 !important;
 }
 
-.border-primary {
+.border-sideBtn {
   border-color: #007bff !important;
 }
 
@@ -6313,12 +6312,12 @@ button.bg-dark:focus {
   color: #fff !important;
 }
 
-.text-primary {
+.text-sideBtn {
   color: #007bff !important;
 }
 
-a.text-primary:hover,
-a.text-primary:focus {
+a.text-sideBtn:hover,
+a.text-sideBtn:focus {
   color: #0056b3 !important;
 }
 
@@ -6746,13 +6745,13 @@ a {
   border-radius: 50%;
 }
 
-#sidebar .custom-menu .btn.btn-primary {
+#sidebar .custom-menu .btn.btn-sideBtn {
   background: #6749b9;
   border-color: #6749b9;
 }
 
-#sidebar .custom-menu .btn.btn-primary:hover,
-#sidebar .custom-menu .btn.btn-primary:focus {
+#sidebar .custom-menu .btn.btn-sideBtn:hover,
+#sidebar .custom-menu .btn.btn-sideBtn:focus {
   background: #6749b9 !important;
   border-color: #6749b9 !important;
 }
@@ -6777,10 +6776,14 @@ a[data-toggle="collapsed"] {
   }
 }
 
+
+
 @media(max-width:235px) {
   #logoutMenu {
     margin-left: 3rem !important;
   }
+
+
 }
 
 @media(max-width:624px) {
@@ -6798,13 +6801,13 @@ a[data-toggle="collapsed"] {
   transition: all 0.3s;
 }
 
-.btn.btn-primary {
+.btn.btn-sideBtn {
   background: #866ec7;
   border-color: #866ec7;
 }
 
-.btn.btn-primary:hover,
-.btn.btn-primary:focus {
+.btn.btn-sideBtn:hover,
+.btn.btn-sideBtn:focus {
   background: #866ec7 !important;
   border-color: #866ec7 !important;
 }
