--- a/src/sidebar/sidebar.css
+++ b/src/sidebar/sidebar.css
@@ -105,6 +105,7 @@
 }
 
 .navbar {
+  z-index: 1;
   position: relative;
   display: -webkit-box;
   display: -ms-flexbox;
@@ -6715,7 +6716,9 @@ a {
     top: 10px !important;
   }
 
-
+  #sidebar.active .custom-menu .btn.btn-sideBtn {
+    margin-left: -66px !important;
+  }
 }
 
 #sidebar .custom-menu {
@@ -6745,10 +6748,27 @@ a {
   border-radius: 50%;
 }
 
+#sidebar.active .custom-menu .btn.btn-sideBtn {
+  background: #6749b9;
+  border-color: #6749b9;
+  transform: translateY(-10%);
+  z-index: 2;
+  position: fixed;
+  margin-left: -28px !important;
+}
+
 #sidebar .custom-menu .btn.btn-sideBtn {
   background: #6749b9;
   border-color: #6749b9;
+  transform: translateY(-10%);
+  z-index: 2;
+  position: fixed;
+  margin-left: -35px !important;
 }
+
+
+
+
 
 #sidebar .custom-menu .btn.btn-sideBtn:hover,
 #sidebar .custom-menu .btn.btn-sideBtn:focus {
