--- a/src/sidebar/sidebar.css
+++ b/src/sidebar/sidebar.css
@@ -6812,6 +6812,26 @@ a[data-toggle="collapsed"] {
   }
 }
 
+@media (max-width: 991.00px) {
+  #sidebar.active .custom-menu .btn.btn-sideBtn {
+    background: #6749b9;
+    border-color: #6749b9;
+    transform: translateY(-10%);
+    z-index: 2;
+    position: fixed;
+    margin-left: -66px !important;
+  }
+
+  #sidebar .custom-menu .btn.btn-sideBtn {
+    background: #6749b9;
+    border-color: #6749b9;
+    transform: translateY(-10%);
+    z-index: 2;
+    position: fixed;
+    margin-left: -30px !important;
+  }
+}
+
 #content {
   width: 100%;
   padding: 0;
