--- a/src/App.css
+++ b/src/App.css
@@ -33,6 +33,48 @@
 .dropdown-toggle::after {
   color: #fff !important;
 }
+.ripple-container {
+  position: relative;
+  display: inline-block;
+  overflow: hidden;
+}
+
+.ripple-container .btn {
+  position: relative;
+  overflow: hidden; /* ensures the ripple is contained within button */
+}
+
+.global-ripple {
+  position: absolute;
+  border-radius: 50%;
+  transform: scale(0);
+  animation: ripple-animation 0.6s ease-out;
+  background-color: rgba(0, 0, 0, 0.2); /* tweak for visibility */
+  pointer-events: none;
+  z-index: 9999;
+}
+
+.ripple-circle {
+  position: absolute;
+  border-radius: 50%;
+  transform: scale(0);
+  animation: ripple-animation 0.6s linear;
+  background-color: rgba(
+    255,
+    255,
+    255,
+    0.5
+  ); /* Light ripple for dark buttons */
+  pointer-events: none;
+  z-index: 999;
+}
+
+@keyframes ripple-animation {
+  to {
+    transform: scale(4);
+    opacity: 0;
+  }
+}
 
 @media (min-width: 356px) {
   .input-group-limit {
