--- a/src/App.css
+++ b/src/App.css
@@ -48,10 +48,10 @@
   position: absolute;
   border-radius: 50%;
   transform: scale(0);
-  animation: ripple-animation 0.6s ease-out;
-  background-color: rgba(0, 0, 0, 0.2); /* tweak for visibility */
+  animation: ripple-animation 0.6s linear;
+  background-color: rgba(255, 255, 255, 0.5); /* tweak for visibility */
   pointer-events: none;
-  z-index: 9999;
+  z-index: 999;
 }
 
 .ripple-circle {
