--- a/src/sidebar/sidebar.css
+++ b/src/sidebar/sidebar.css
@@ -1160,259 +1160,6 @@ a.close.disabled {
 .toast-body {
   padding: 0.75rem;
 }
-
-.modal-open {
-  overflow: hidden;
-}
-
-.modal-open .modal {
-  overflow-x: hidden;
-  overflow-y: auto;
-}
-
-.modal {
-  position: fixed;
-  top: 0;
-  left: 0;
-  z-index: 1050;
-  display: none;
-  width: 100%;
-  height: 100%;
-  overflow: hidden;
-  outline: 0;
-}
-
-.modal-dialog {
-  position: relative;
-  width: auto;
-  margin: 0.5rem;
-  pointer-events: none;
-}
-
-.modal.fade .modal-dialog {
-  -webkit-transition: -webkit-transform 0.3s ease-out;
-  transition: -webkit-transform 0.3s ease-out;
-  -o-transition: transform 0.3s ease-out;
-  transition: transform 0.3s ease-out;
-  transition: transform 0.3s ease-out, -webkit-transform 0.3s ease-out;
-  -webkit-transform: translate(0, -50px);
-  -ms-transform: translate(0, -50px);
-  transform: translate(0, -50px);
-}
-
-@media (prefers-reduced-motion: reduce) {
-  .modal.fade .modal-dialog {
-    -webkit-transition: none;
-    -o-transition: none;
-    transition: none;
-  }
-}
-
-.modal.show .modal-dialog {
-  -webkit-transform: none;
-  -ms-transform: none;
-  transform: none;
-}
-
-.modal-dialog-scrollable {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  max-height: calc(100% - 1rem);
-}
-
-.modal-dialog-scrollable .modal-content {
-  max-height: calc(100vh - 1rem);
-  overflow: hidden;
-}
-
-.modal-dialog-scrollable .modal-header,
-.modal-dialog-scrollable .modal-footer {
-  -ms-flex-negative: 0;
-  flex-shrink: 0;
-}
-
-.modal-dialog-scrollable .modal-body {
-  overflow-y: auto;
-}
-
-.modal-dialog-centered {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-align: center;
-  -ms-flex-align: center;
-  align-items: center;
-  min-height: calc(100% - 1rem);
-}
-
-.modal-dialog-centered::before {
-  display: block;
-  height: calc(100vh - 1rem);
-  content: "";
-}
-
-.modal-dialog-centered.modal-dialog-scrollable {
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-  -ms-flex-direction: column;
-  flex-direction: column;
-  -webkit-box-pack: center;
-  -ms-flex-pack: center;
-  justify-content: center;
-  height: 100%;
-}
-
-.modal-dialog-centered.modal-dialog-scrollable .modal-content {
-  max-height: none;
-}
-
-.modal-dialog-centered.modal-dialog-scrollable::before {
-  content: none;
-}
-
-.modal-content {
-  position: relative;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-  -ms-flex-direction: column;
-  flex-direction: column;
-  width: 100%;
-  pointer-events: auto;
-  background-color: #fff;
-  background-clip: padding-box;
-  border: 1px solid rgba(0, 0, 0, 0.2);
-  border-radius: 0.3rem;
-  outline: 0;
-}
-
-.modal-backdrop {
-  position: fixed;
-  top: 0;
-  left: 0;
-  z-index: 1040;
-  width: 100vw;
-  height: 100vh;
-  background-color: #000;
-}
-
-.modal-backdrop.fade {
-  opacity: 0;
-}
-
-.modal-backdrop.show {
-  opacity: 0.5;
-}
-
-.modal-header {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-align: start;
-  -ms-flex-align: start;
-  align-items: flex-start;
-  -webkit-box-pack: justify;
-  -ms-flex-pack: justify;
-  justify-content: space-between;
-  padding: 1rem 1rem;
-  border-bottom: 1px solid #dee2e6;
-  border-top-left-radius: 0.3rem;
-  border-top-right-radius: 0.3rem;
-}
-
-.modal-header .close {
-  padding: 1rem 1rem;
-  margin: -1rem -1rem -1rem auto;
-}
-
-.modal-title {
-  margin-bottom: 0;
-  line-height: 1.5;
-}
-
-.modal-body {
-  position: relative;
-  -webkit-box-flex: 1;
-  -ms-flex: 1 1 auto;
-  flex: 1 1 auto;
-  padding: 1rem;
-}
-
-.modal-footer {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-align: center;
-  -ms-flex-align: center;
-  align-items: center;
-  -webkit-box-pack: end;
-  -ms-flex-pack: end;
-  justify-content: flex-end;
-  padding: 1rem;
-  border-top: 1px solid #dee2e6;
-  border-bottom-right-radius: 0.3rem;
-  border-bottom-left-radius: 0.3rem;
-}
-
-.modal-footer > :not(:first-child) {
-  margin-left: 0.25rem;
-}
-
-.modal-footer > :not(:last-child) {
-  margin-right: 0.25rem;
-}
-
-.modal-scrollbar-measure {
-  position: absolute;
-  top: -9999px;
-  width: 50px;
-  height: 50px;
-  overflow: scroll;
-}
-
-@media (min-width: 576px) {
-  .modal-dialog {
-    max-width: 500px;
-    margin: 1.75rem auto;
-  }
-
-  .modal-dialog-scrollable {
-    max-height: calc(100% - 3.5rem);
-  }
-
-  .modal-dialog-scrollable .modal-content {
-    max-height: calc(100vh - 3.5rem);
-  }
-
-  .modal-dialog-centered {
-    min-height: calc(100% - 3.5rem);
-  }
-
-  .modal-dialog-centered::before {
-    height: calc(100vh - 3.5rem);
-  }
-
-  .modal-sm {
-    max-width: 300px;
-  }
-}
-
-@media (min-width: 992px) {
-  .modal-lg,
-  .modal-xl {
-    max-width: 800px;
-  }
-}
-
-@media (min-width: 1200px) {
-  .modal-xl {
-    max-width: 1140px;
-  }
-}
-
 .tooltip {
   position: absolute;
   z-index: 1070;
@@ -6089,22 +5836,6 @@ button:focus {
   box-shadow: none !important;
 }
 
-h1,
-h2,
-h3,
-h4,
-h5,
-.h1,
-.h2,
-.h3,
-.h4,
-.h5 {
-  line-height: 1.5;
-  font-weight: 400;
-  font-family: "Poppins", Arial, sans-serif;
-  color: #000;
-}
-
 .ftco-section {
   padding: 7em 0;
 }
@@ -6238,7 +5969,7 @@ a {
   border-radius: 50% !important;
 }
 
-#sidebar.active .custom-menu .btns.btns-sideBtn {
+#sidebar.active .custom-menu .btns-sideBtn {
   background: #6749b9;
   border-color: #6749b9;
   transform: translateY(-15%) !important;
@@ -6248,7 +5979,7 @@ a {
   margin-right: inherit !important;
 }
 
-#sidebar .custom-menu .btns.btns-sideBtn {
+#sidebar .custom-menu .btns-sideBtn {
   background: #6749b9;
   border-color: #6749b9;
   transform: translateY(-25%) !important;
@@ -6258,8 +5989,8 @@ a {
   margin-right: inherit !important;
 }
 
-#sidebar .custom-menu .btns.btns-sideBtn:hover,
-#sidebar .custom-menu .btns.btns-sideBtn:focus {
+#sidebar .custom-menu .btns-sideBtn:hover,
+#sidebar .custom-menu .btns-sideBtn:focus {
   background: #6749b9 !important;
   border-color: #6749b9 !important;
 }
@@ -6277,13 +6008,13 @@ a[data-toggle="collapsed"] {
   transition: all 0.3s;
 }
 
-.btns.btns-sideBtn {
+.btns-sideBtn {
   background: #866ec7;
   border-color: #866ec7;
 }
 
-.btns.btns-sideBtn:hover,
-.btns.btns-sideBtn:focus {
+.btns-sideBtn:hover,
+.btns-sideBtn:focus {
   background: #866ec7 !important;
   border-color: #866ec7 !important;
 }
@@ -6311,7 +6042,7 @@ a[data-toggle="collapsed"] {
 }
 
 @media (max-width: 991px) {
-  #sidebar.active .custom-menu .btns.btns-sideBtn {
+  #sidebar.active .custom-menu .btns-sideBtn {
     background: #6749b9 !important;
     border-color: #6749b9 !important;
     transform: translateY(-10%) !important;
@@ -6321,9 +6052,7 @@ a[data-toggle="collapsed"] {
     margin-right: inherit !important;
   }
 
-  #sidebar .custom-menu .btns.btns-sideBtn {
-    background: #6749b9 !important;
-    border-color: #6749b9 !important;
+  #sidebar .custom-menu .btns-sideBtn {
     transform: translateY(-10%) !important;
     z-index: 2 !important;
     position: relative !important;
@@ -6374,7 +6103,7 @@ a[data-toggle="collapsed"] {
     top: 10px !important;
   }
 
-  #sidebar.active .custom-menu .btns.btns-sideBtn {
+  #sidebar.active .custom-menu .btns-sideBtn {
     margin-left: -66px !important;
     margin-right: inherit !important;
   }
