--- a/src/App.css
+++ b/src/App.css
@@ -57,13 +57,19 @@ table {
   min-width: 85px;
   max-width: 85px;
 }
-@media (max-width: 510px) {
+
+@media (max-width: 992px) {
+  .main-body {
+    margin-top: 0.5rem;
+    margin-bottom: 0%;
+  }
+
   .dash {
     margin-top: 20px !important;
   }
 }
 
-@media (max-width: 428px) {
+@media (max-width: 455px) {
   .dept {
     margin-top: 1rem !important;
   }
