--- a/public/css/mdb.css
+++ b/public/css/mdb.css
@@ -152,7 +152,7 @@
   color-scheme: dark;
   --mdb-body-color: #fff;
   --mdb-body-color-rgb: 255, 255, 255;
-  --mdb-body-bg: #303030;
+  --mdb-body-bg: #30303000;
   --mdb-body-bg-rgb: 48, 48, 48;
   --mdb-emphasis-color: #fff;
   --mdb-emphasis-color-rgb: 255, 255, 255;
