--- a/public/css/mdb.css
+++ b/public/css/mdb.css
@@ -2226,6 +2226,7 @@ textarea.form-control-lg {
 }
 [data-mdb-theme="dark"] .form-select {
   --mdb-form-select-bg-img: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 16 16'%3e%3cpath fill='none' stroke='%23fff' stroke-linecap='round' stroke-linejoin='round' stroke-width='2' d='m2 5 6 6 6-6'/%3e%3c/svg%3e");
+  background-color: var(--mdb-card-bg);
 }
 .form-check {
   display: block;
