--- a/src/App.css
+++ b/src/App.css
@@ -201,6 +201,30 @@ input[type="file"] {
   font-size: 0.9rem;
 }
 
+/* Center dark rounded box */
+.blockui-box {
+  background: rgba(30, 30, 30, 0.489);
+  padding: 18px 26px;
+  border-radius: 12px;
+  display: flex;
+  align-items: center !important;
+  gap: 10px;
+  box-shadow: 0 8px 25px rgba(0, 0, 0, 0.5);
+}
+
+/* Text */
+.blockui-text {
+  color: #fff;
+  font-size: 20px;
+  font-weight: 500;
+  white-space: nowrap;
+}
+
+.blockui-icon {
+  color: #f7f7f7;
+  margin-left: 75px;
+}
+
 @media (max-width: 992px) {
   .main-body {
     margin-top: 0.5rem;
